import {Entity} from "../entity";

export interface Property extends Entity {

    name: string;
    value: string;
}